--- a/Data/Cancer dataset/breast/readme
+++ b/Data/Cancer dataset/breast/readme
@@ -1,1 +1,1 @@
-there are three breast datasets,
+there are three breast datasets,GSE145 and GSE3494 are too big to unload,you can download from NCBI website.
