--- a/Data/Cancer dataset/thyroid/readme
+++ b/Data/Cancer dataset/thyroid/readme
@@ -1,1 +1,1 @@
-there are three thyroid datasets
+there are three thyroid datasets, GSE5364 and GSE33630 are too big to upload, you can download from NCBI website
